[package]
name = "mpesa"
version = "0.4.2"
authors = ["Collins Muriuki <murerwacollins@gmail.com>"]
edition = "2018"
description = "A wrapper around the M-PESA API in Rust."
keywords = ["api", "mpesa", "mobile"]
repository = "https://github.com/collinsmuriuki/mpesa-rust"
readme = "./README.md"
license = "MIT"

[dependencies]
base64 = {version = "0.13", optional = true}
chrono = {version = "0.4", optional = true}
openssl = {version = "0.10", optional = true}
reqwest = {version = "0.11", features = ["json"]}
serde = {version="1.0", features= ["derive"]}
serde_json = "1.0"
serde_repr = "0.1"
thiserror = "1.0.37"
wiremock = "0.5"

[dev-dependencies]
dotenv = "0.15"
tokio = {version = "1", features = ["rt", "rt-multi-thread", "macros"]}
wiremock = "0.5"

[features]
default = [
	"account_balance",
	"b2b", 
	"b2c",
	"c2b_register",
	"c2b_simulate",
	"express_request",
	"transaction_reversal",
	"transaction_status"
]
account_balance = ["dep:openssl", "dep:base64"]
b2b = ["dep:openssl", "dep:base64"]
b2c = ["dep:openssl", "dep:base64"]
c2b_register = []
c2b_simulate = []
express_request = ["dep:chrono", "dep:base64"]
transaction_reversal = ["dep:openssl", "dep:base64"]
transaction_status= ["dep:openssl", "dep:base64"]
