[package]
name = "mpesa"
version = "1.0.0"
authors = ["Collins Muriuki <murerwacollins@gmail.com>"]
edition = "2021"
description = "A wrapper around the M-PESA API in Rust."
keywords = ["api", "mpesa", "mobile"]
repository = "https://github.com/collinsmuriuki/mpesa-rust"
readme = "./README.md"
license = "MIT"

[dependencies]
base64 = { version = "0.21", optional = true }
chrono = { version = "0.4", optional = true, default-features = false, features = [
    "clock",
    "serde",
] }
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
rsa = { version = "0.9", optional = true }
secrecy = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
thiserror = "1.0"
x509-parser = { version = "0.15", optional = true }
getrandom = { version = "0.2", optional = true, features = ["js"] }


[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }


[dev-dependencies]
dotenv = "0.15"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
wiremock = "0.5"

[features]
default = [
    "account_balance",
    "b2b",
    "b2c",
    "bill_manager",
    "c2b_register",
    "c2b_simulate",
    "express_request",
    "transaction_reversal",
    "transaction_status",
]
account_balance = []
b2b = ["dep:base64", "dep:x509-parser", "dep:rsa"]
b2c = ["dep:base64", "dep:x509-parser", "dep:rsa"]
bill_manager = ["dep:chrono"]
c2b_register = []
c2b_simulate = []
express_request = ["dep:chrono", "dep:base64"]
transaction_reversal = ["dep:base64", "dep:x509-parser", "dep:rsa"]
transaction_status = ["dep:base64", "dep:x509-parser", "dep:rsa"]
