[package]
name = "mpesa"
version = "0.3.6"
authors = ["Collins Muriuki <murerwacollins@gmail.com>"]
edition = "2018"
description = "A wrapper around the M-PESA API in Rust."
keywords = ["api", "mpesa", "mobile"]
repository = "https://github.com/collinsmuriuki/mpesa-rust"
readme = "README.md"
license = "MIT"

[dependencies]
serde_json = "1.0"
dotenv = "0.15.0"
mpesa_derive = "0.2.1"
failure = "0.1.5"
failure_derive = "0.1.5"
chrono = "0.4"

[dependencies.reqwest]
version = "0.10"
features = ["blocking", "json"]

[dependencies.serde]
version = "1.0.114"
features = ["derive"]

[dependencies.openssl]
version = "0.10.30"
optional = true

[dependencies.base64]
version = "0.12.3"
optional = true

[features]
default = ["b2b", "b2c" ,"account_balance"]
account_balance = ["openssl", "base64"]
b2c = ["openssl", "base64"]
b2b = ["openssl", "base64"]